# http-client

http-client/: http-client.cabal
http-client-tls/: http-client-tls.cabal
http-client-tls/Network/HTTP/Client/: TLS_0_3_3_SHIM.hs
http-client/Network/HTTP/: Client_0_5_3_2_SHIM.hs
http-client/Network/HTTP/Client_0_5_3_2_SHIM/: Body.hs  Connection.hs  Cookies.hs  Core.hs  Headers.hs  Internal.hs  Manager.hs  MultipartFormData.hs  Request.hs  Response.hs  Types.hs  Util.hs
