name:                http-client-zero-five-three-two-shim
version:             0.5.3.2
synopsis:            An HTTP client engine
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/http-client>.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:      ., publicsuffixlist
  exposed-modules:     Network.HTTP.Client_0_5_3_2_SHIM
                       Network.HTTP.Client_0_5_3_2_SHIM.MultipartFormData
                       Network.HTTP.Client_0_5_3_2_SHIM.Internal
  other-modules:       Network.HTTP.Client_0_5_3_2_SHIM.Body
                       Network.HTTP.Client_0_5_3_2_SHIM.Connection
                       Network.HTTP.Client_0_5_3_2_SHIM.Cookies
                       Network.HTTP.Client_0_5_3_2_SHIM.Core
                       Network.HTTP.Client_0_5_3_2_SHIM.Headers
                       Network.HTTP.Client_0_5_3_2_SHIM.Manager
                       Network.HTTP.Client_0_5_3_2_SHIM.Request
                       Network.HTTP.Client_0_5_3_2_SHIM.Response
                       Network.HTTP.Client_0_5_3_2_SHIM.Types
                       Network.HTTP.Client_0_5_3_2_SHIM.Util
                       Network.PublicSuffixList.Lookup
                       Network.PublicSuffixList.Types
                       Network.PublicSuffixList.Serialize
                       Network.PublicSuffixList.DataStructure
  build-depends:       base              >= 4.5    && < 5
                     , bytestring        >= 0.10
                     , text              >= 0.11
                     , http-types        >= 0.8
                     , blaze-builder     >= 0.3
                     , time              >= 1.2
                     , network           >= 2.3
                     , streaming-commons >= 0.1.0.2 && < 0.2
                     , containers
                     , transformers
                     , deepseq           >= 1.3    && <1.5
                     , case-insensitive  >= 1.0
                     , base64-bytestring >= 1.0    && <1.1
                     , cookie
                     , exceptions        >= 0.4
                     , array
                     , random
                     , filepath
                     , mime-types
                     , ghc-prim
  if flag(network-uri)
    build-depends: network >= 2.6, network-uri >= 2.6
  else
    build-depends: network < 2.6
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  other-modules:       Network.HTTP.ClientSpec
  build-depends:       base
                     , http-client
                     , hspec
                     , monad-control
                     , bytestring
                     , text
                     , http-types
                     , blaze-builder
                     , time
                     , network
                     , containers
                     , transformers
                     , deepseq
                     , case-insensitive
                     , base64-bytestring
                     , zlib
                     , async
                     , streaming-commons >= 0.1.1


test-suite spec-nonet
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-nonet
  default-language:    Haskell2010
  other-modules:       Network.HTTP.ClientSpec
                       Network.HTTP.Client.ResponseSpec
                       Network.HTTP.Client.BodySpec
                       Network.HTTP.Client.HeadersSpec
                       Network.HTTP.Client.RequestSpec
                       Network.HTTP.Client.RequestBodySpec
                       Network.HTTP.Client.CookieSpec
  build-depends:       base
                     , http-client
                     , hspec
                     , monad-control
                     , bytestring
                     , text
                     , http-types
                     , blaze-builder
                     , time
                     , network
                     , network-uri
                     , containers
                     , transformers
                     , deepseq
                     , case-insensitive
                     , base64-bytestring
                     , zlib
                     , async
                     , streaming-commons >= 0.1.1
                     , directory
